--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://www.mohamedahmed.ml",
+  "homepage" : "https://mohamed4ahmed.github.io/Temps/",
   "name": "templet",
   "version": "0.1.0",
   "private": true,
